2004-01-08  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* gst/gstutils.h:
	  Add GST_BOILERPLATE(_FULL), GST_PARENT_CALL and
	  GST_PARENT_CALL_WITH_DEFAULT
	* gst/elements/gstaggregator.c: 
	* gst/elements/gstbufferstore.c: 
	* gst/elements/gstfakesink.c: 
	* gst/elements/gstfakesrc.c: 
	* gst/elements/gstfdsink.c: 
	* gst/elements/gstfdsrc.c: 
	* gst/elements/gstfilesink.c: 
	* gst/elements/gstfilesrc.c: 
	* gst/elements/gstidentity.c: 
	* gst/elements/gstmd5sink.c: 
	* gst/elements/gstmultidisksrc.c:
	* gst/elements/gstpipefilter.c: 
	* gst/elements/gstshaper.c:
	* gst/elements/gststatistics.c:
	* gst/elements/gsttee.c:
	* gst/elements/gsttypefindelement.c:
	  use them.

2004-01-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-docs.sgml: remove props
	* docs/gst/gstreamer-sections.txt: remove props
	* docs/gst/tmpl/gst.sgml:
	* docs/gst/tmpl/gstbin.sgml:
	* docs/gst/tmpl/gstbuffer.sgml:
	* docs/gst/tmpl/gstcaps.sgml:
	* docs/gst/tmpl/gstclock.sgml:
	* docs/gst/tmpl/gstelement.sgml:
	* docs/gst/tmpl/gstindex.sgml:
	* docs/gst/tmpl/gstobject.sgml:
	* docs/gst/tmpl/gstpad.sgml:
	* docs/gst/tmpl/gstpadtemplate.sgml:
	* docs/gst/tmpl/gstreamer-unused.sgml:
	* docs/gst/tmpl/gstthread.sgml:
	* docs/gst/tmpl/gstxml.sgml:
	  sync with code reorganization

2004-01-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gstelement.c: (gst_element_get_compatible_pad_filtered):
	Make the 'Could not find compatible pad' message more informative.

2004-01-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/gstcaps.c: (gst_caps_append_structure):
	  Move the poisoning to allow a NULL structure
	* gst/gstevent.c: (_gst_event_free):
	  When freeing a navigation event, free the structure
	  also

2004-01-04  David Schleef  <ds@schleef.org>

	* gst/elements/gsttee.c: (gst_tee_init), (gst_tee_request_new_pad):
	Remove usage of gst_pad_proxy_fixate.
	* gst/gstcaps.c: (gst_caps_append), (gst_caps_append_structure),